project structure fixed, maven warnings fixed